fixes for bonuses
