# app/OpenApi/Endpoints/BonusDeleteEndpoint.php
@@ -1,35 +1,0 @@
-<?php
-namespace App\OpenApi\Endpoints;
-
-use OpenApi\Attributes as OA;
-
-#[OA\Post(
-    path: "/api/v1/integrations/1c/bonuses/delete",
-    description: "Delete Bonuses",
-    summary: "Delete Bonuses by ids array",
-    security: [["bearerAuth" => []]],
-    requestBody: new OA\RequestBody(
-        ref: "#/components/requestBodies/C1EntityDeleteRequestBody"
-    ),
-    tags: ["bonuses"],
-    responses: [
-        new OA\Response(
-            response: 200,
-            description: "Successfully response",
-            content: new OA\JsonContent(
-                properties: [
-                    new OA\Property(
-                        property: "deleted",
-                        type: "integer",
-                        example: 3,
-                    ),
-                ]
-            )
-        ),
-        new OA\Response(
-            response: 401,
-            description: "Unauthenticated"
-        )
-    ]
-)]
-class BonusDeleteEndpoint {}
